syntax = "proto3";
package ledger.fantoken;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/bitsongofficial/ledger/x/fantoken/types";
option (gogoproto.goproto_getters_all) = false;

// FanToken defines a standard for the fungible token
message FanToken {
    option (gogoproto.goproto_stringer) = false;
    option (gogoproto.goproto_getters) = false;

    string denom = 1;
    string name = 2;
    bytes max_supply = 3 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
        (gogoproto.moretags)   = "yaml:\"max_supply\"",
        (gogoproto.nullable)   = false
    ];
    bool mintable = 4;
    string owner = 5;
}

// Params defines fantoken module's parameters
message Params {
    option (gogoproto.equal) = true;
    option (gogoproto.goproto_stringer) = false;

    cosmos.base.v1beta1.Coin issue_price = 2 [
        (gogoproto.moretags) = "yaml:\"issue_price\"",
        (gogoproto.nullable) = false
    ];
}
